Fix subscribe alignment

--- a/src/stylus/subscribe.styl
+++ b/src/stylus/subscribe.styl
@@ -28,7 +28,7 @@
 	input[type="button"],
 	input[type="submit"] {
 		border: none;
-		padding: 16px;
+		padding: 0 16px;
 		background: $button-red;
 		color: #fff;
 		font-family: 'Proxima Nova Semibold';
@@ -38,6 +38,7 @@
 		border-bottom-left-radius: 0px;
 		border-top-left-radius: 0px;
 		transition: background-color ease .2s;
+		height: 50px;
 
 		&:focus {
 			outline: none;
